# RustDeadLock

./: .gitattributes
Deadlock/: Cargo.toml  bash.sh  build.rs  counter.txt  counter_non-optimized.txt  loop.txt  result.txt  single_thread.txt  test.txt
Deadlock/mirs/: double_lock_1.mir  double_lock_2.mir  struct.txt  test.mir  test.txt
Deadlock/rustc_compat/src/: cargo_plugin.rs  plugin.rs  rustc_plugin.rs
Deadlock/src/: analysis.rs  context.rs  driver.rs  lib.rs  main.rs  option.rs
Deadlock/src/analysis/: alias.rs  callgraph.rs  fact.rs  lock.rs  lockgraph.rs  tools.rs  visitor.rs
Deadlock/src/analysis/alias/: graph.rs  node.rs
Deadlock/src/analysis/callgraph/: call_graph_node.rs  collector.rs
Deadlock/src/utils/: mir.rs
Deadlock/test/: branch.rs  counter.rs  double_lock_1.rs  double_lock_2.rs  loop.rs  quick_sort.rs  single_thread.rs  struct.rs  test  test.rs
Deadlock/test/alias/: t1.mir  t1.rs  t3.mir  t3.rs  t4.mir  t4.rs  t5.rs
Deadlock/test/double_lock/: dl_0  dl_0.mir  dl_0.rs  dl_1_match  dl_1_match.mir  dl_1_match.rs  dl_2_field.mir  dl_2_field.rs  dl_3_interprocedure.rs
Deadlock/test/double_lock_0/: Cargo.toml  rust-toolchain.toml
Deadlock/test/double_lock_0/src/: main.rs
test/: conflict_lock_1.rs  generics.rs  test.rs
test/alias/: t2.mir  t2.rs  t3.mir  t3.rs
test/double_lock/: dl_2_field.rs  dl_2_interprocedure
test/double_lock_field/: Cargo.toml  mir.alias  mir.mir
test/double_lock_field/src/: main.rs
test/double_lock_match/: Cargo.toml
test/double_lock_match/src/: func.rs  main.rs
test/inter_double_lock/: Cargo.toml
(+1 files in other folders)
