[package]
build = "build.rs"
edition = "2021"
name = "rust_deadlock"
version = "0.1.0"

[workspace]
members = [
    "rustc_compat", "test/double_lock_0",
]

[dependencies]
structopt = "0.3.26"
log = "0.4"
pretty_env_logger = "0.5.0"
itertools = "0.12.0"
ansi_term = "0.12.1"
lazy_static = "1.5.0"
rustc_compat = {path = "rustc_compat"}
tracing = {workspace = true}
serde = {workspace = true}
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
clap = {version = "4.3.24", features = ["derive"]}


[package.metadata.rust-analyzer]
rustc_private = true

[workspace.dependencies]
serde = {version = "1", features = ["derive"]}
tracing = "0.1.40"
